completed the example for  environment file and  enhanced README with detailed setup instructions and API documentation

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,18 @@
+# Server Configuration
 PORT=3000
 NODE_ENV=development
+SERVER_URL=http://localhost:3000
 
-# Database
-MONGODB_URI=your_mongodb_connection_string
+# Database Configuration
+# Multiple database URIs for different services
+USERS_DB_URI=your_users_mongodb_connection_string
+SHORTURLS_DB_URI=your_shorturls_mongodb_connection_string
+POSTS_DB_URI=your_posts_mongodb_connection_string
+SUBSCRIPTIONS_DB_URI=your_subscriptions_mongodb_connection_string
+NEWSLETTERS_DB_URI=your_newsletters_mongodb_connection_string
+DB_NAME=your_database_name
 
-# JWT
+# JWT Configuration
 JWT_SECRET=your_jwt_secret_key
 JWT_EXEXPIRES_IN=8h
 
@@ -14,8 +22,20 @@ EMAIL_SERVICE=your_email_service_provider
 EMAIL_ADDRESS=your_email_address
 EMAIL_PASSWORD=your_email_app_password
 
-# Security
+# Security Configuration
 HMAC_SECRET=your_hmac_secret_key
-HASH_SALT=your_hash_salt
+HASH_SALT=14
 ARCJET_ENV=development
 ARCJET_KEY=your_arcjet_api_key
+
+# Account Deletion
+SURE_MESSAGE="DELETE MY ACCOUNT"
+
+# Upstash/QStash Configuration (for workflows)
+QSTASH_URL=your_qstash_url
+QSTASH_TOKEN=your_qstash_token
+
+# API Key Encryption
+API_KEY_ENCRYPTION_SECRET=your_32_byte_hex_encryption_secret
+API_KEY_ENCRYPTION_ALGORITHM=aes-256-cbc
+API_KEY_ENCRYPTION_IV_LENGTH=16
